mlops/iac/modules/ingress-nginx/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ${ingress_name}
  annotations: 
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "chatbot-frontend-service"
    # nginx.ingress.kubernetes.io/limit-rps: "5" # Requests / second / IP
    # nginx.ingress.kubernetes.io/limit-burst: "10" # Temporary overtaking allowed. Default: limit theo remote IP

spec: 
  ingressClassName: nginx
  rules: 
    - host: ${frontend_host} # subdomain
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: ${frontend_svc} # must match service name of frontend
                port: 
                  number: ${frontend_port}

    - host: ${backend_host} # subdomain
      http:
        paths:
          - path: /  
            pathType: Prefix
            backend:
              service:
                name: ${backend_svc} # must match service name of backend
                port:
                  number: ${backend_port}
